--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -309,7 +309,7 @@ ul.post-tags li {
     border-color: #202020;
 }
 .dark .nav.scroll {
-    background: #e3e3e3;
+    background: #101010;
     border-color: #101010;
 }
 .dark .nav .brand a {
@@ -328,7 +328,7 @@ ul.post-tags li {
     color: rgba(255, 255, 255, 0.9);
 }
 .dark h2 {
-    border-color: #303030;
+    border-color: #efefef;
 }
 .dark h1, .dark h2, .dark h3, .dark h4, .dark h5 {
     color: rgba(255, 255, 255, 0.98);
